@@ -1,10 +1,9 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 _Name=Pioneers Editor
 _Comment=Create your own game for Pioneers
 Exec=pioneers-editor
-Icon=pioneers-editor.png
+Icon=pioneers-editor
 Terminal=false
 Type=Application
 Categories=Game;BoardGame;GNOME;GTK;
