@@ -2,6 +2,10 @@
 	* editor/gtk/Makefile.am, server/gtk/Makefile.am, Makefile.am,
 	client/gtk/data/Makefile.am: Created the large icons for the GNOME 3
 	desktop.
+	* editor/gtk/pioneers-editor.desktop.in,
+	server/gtk/pioneers-server.desktop.in,
+	client/gtk/pioneers.desktop.in: Removed the obsolete UTF-8 encoding tag
+	and removed the filename extension from the Icon tag.
 
 2012-01-17  Roland Clobus <rclobus@rclobus.nl>
 	* client/common/client.c: Fixed string building function.
